2009/07/31 (TS):
 - do not byteswap IP header checksum when inserting (fillinSrcCsumIp()).
2009/07/28 (TS):
 - removed unnecessary inclusion of drvLan9118.h from lanIpBasic.h.
 - silenced some compiler warnings
 - added udpCommJoinMcast(), udpCommLeaveMcast() and udpCommSetIfMcast().
2009/06/26 (TS):
 - added udpCommAllocPacket()
 - added udpCommSendPkt(), udpCommSendPktTo() (BSD only, so far)
 - define UDPCOMM_PKTSZ (max size of payload)
 - Makefile.Host builds a small library with just udpCommBSD
2009/04/21 (TS):
 - udpSockHdrsReflect() needs to convert port number to host endianness
   before passing to fillinSrcCsumUdp().
2009/02/18 (TS):
 - iir2_bpmsim declared in new header (bpmsim.h)
 - iir2_bpmsim takes new argument (2nd initial value) which
   allows to add random phase + time-of-arrival.
 - add (compile-time-optional) SDDS reader which allows
   padProtoHost to play back waveforms from an SDDS file.
 - streamSim() adds (common-mode to all 4 channels) random
   phase + time-of-arrival to simulated waveforms.
 - padProtoHost has 'server mode' with new '-P <server_xmit_period>'
   option. Transmit simulated or SDDS-playback waveform every P seconds.
   (in server mode).
 - if port # (-p) is zero use PADPROTO_STRM_PORT in listener mode.
2008/10/29 (TS): Fix problems reported by Stephen Norum (beatnik)
 - TX ring was apparently exhausted (send returning -ENOSPC). This
   occurred due to corruption because the driver task swiped the TX
   ring w/o acquiring the lock.
 - After re-plugging cable the port seemed to be dead. Need to
   propagate link change to serial port; use new MVE driver entry
   point BSP_mve_ack_link_chg() for this purpose.
2008/10/17 (TS):
 - define minimal alignment RX packets are guaranteed to have
   in lanIpProto.h. Made sure the BSD implementation of udpComm
   maintains the same alignment. This is important accessing when
   packet contents with a vector-engine or other method that works
   faster on properly aligned data.