@@ -9,21 +9,22 @@ liblanIpBasic_a_SOURCES        = lanIpBasicTest.c drvUdpSock.c hwtmr.h
 
 EXTRA_liblanIpBasic_a_SOURCES  = padProto.c lanIpBasic.c
 EXTRA_liblanIpBasic_a_SOURCES += drvLan9118.c drvLan9118IpBasic.c padStream.c bpmsim.c
-EXTRA_liblanIpBasic_a_SOURCES += drvMveIpBasic.c
+EXTRA_liblanIpBasic_a_SOURCES += drvGnrIpBasic.c
 EXTRA_liblanIpBasic_a_SOURCES += drvAmdEthIpBasic.c
+EXTRA_liblanIpBasic_a_SOURCES += gnreth_lldrv.h
+EXTRA_liblanIpBasic_a_SOURCES += mve_lldrv.c
+EXTRA_liblanIpBasic_a_SOURCES += e1k_lldrv.c
 
 lanIpObjs_uC5282               = drvLan9118.$(OBJEXT) drvLan9118IpBasic.$(OBJEXT)
 lanIpObjs_uC5282              += padProto.$(OBJEXT) padStream.$(OBJEXT) bpmsim.$(OBJEXT)
 
-lanIpObjs_beatnik              = drvMveIpBasic.$(OBJEXT) padProto.$(OBJEXT)
+lanIpObjs_beatnik              = drvGnrIpBasic.$(OBJEXT) padProto.$(OBJEXT) mve_lldrv.$(OBJEXT)
 
-lanIpObjs_pci                  = drvAmdEthIpBasic.$(OBJEXT)
+#lanIpObjs_pci                  = drvAmdEthIpBasic.$(OBJEXT)
+lanIpObjs_pci                  = drvGnrIpBasic.$(OBJEXT) e1k_lldrv.$(OBJEXT)
+lanIpObjs_pci_CPPFLAGS         = -I$(srcdir)/../bsd_eth_drivers/if_em/
 
-lanIpObjs_uC5282_DEFS          = -DDRVLAN9118
-lanIpObjs_beatnik_DEFS         = -DDRVMVE
-lanIpObjs_pci_DEFS             = -DDRVAMD
-
-AM_CPPFLAGS                   += $(lanIpObjs_$(LANIPBASIC_SUPPORT)_DEFS)
+AM_CPPFLAGS                   += $(lanIpObjs_$(LANIPBASIC_SUPPORT)_CPPFLAGS)
 
 include_HEADERS                = drvLan9118.h lanIpBasic.h lanIpProto.h padProto.h udpComm.h
 include_HEADERS               += padStream.h lanIpBasicSetup.h drvUdpSock.h
