@@ -1,3 +1,11 @@
+2009/08/06 (TS):
+ - renamed 'drvMveIpBasic.c' -> 'drvGnrIpBasic.c' and created a 
+   'low-level driver' API. This allows for re-using this code
+   for all NIC drivers that provide the same low-level API as
+   the mv64360 (i.e., most recently written drivers by me
+   such as the mvme3100's FEC or an e1000 driver based on
+   intel's e1000_api.h).
+   mv64360-specific entry points are defined in 'mve_lldrv.c'.
 2009/07/31 (TS):
  - do not byteswap IP header checksum when inserting (fillinSrcCsumIp()).
 2009/07/28 (TS):
